bug 788001 - incorrect spdy assert conditions r=honzab

--HG--
extra : rebase_source : 9e5bc856e2075dc5b497d165e328f6f8667e5493