netwerk/protocol/http/SpdySession3.cpp
@@ -284,13 +284,11 @@ SpdySession3::AddStream(nsAHttpTransaction *aHttpTransaction,
                        int32_t aPriority)
 {
   NS_ABORT_IF_FALSE(PR_GetCurrentThread() == gSocketThread, "wrong thread");
-  NS_ABORT_IF_FALSE(!mStreamTransactionHash.Get(aHttpTransaction),
-                    "AddStream duplicate transaction pointer");
 
   // integrity check
   if (mStreamTransactionHash.Get(aHttpTransaction)) {
     LOG3(("   New transaction already present\n"));
-    NS_ABORT_IF_FALSE(false, "New transaction already present in hash");
+    NS_ABORT_IF_FALSE(false, "AddStream duplicate transaction pointer");
     return false;
   }
 
@@ -1920,9 +1918,6 @@ SpdySession3::Close(nsresult aReason)
 
   mClosed = true;
 
-  NS_ABORT_IF_FALSE(mStreamTransactionHash.Count() ==
-                    mStreamIDHash.Count(),
-                    "index corruption");
   mStreamTransactionHash.Enumerate(ShutdownEnumerator, this);
   mStreamIDHash.Clear();
   mStreamTransactionHash.Clear();
